--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,8 @@
             </li>
           </ul>
         </div>
+
+        <!-- Sponsorship -->
         <script id="parterListingTemplate" type="text/template">
             {% raw  %}
             <a href="{{url}}" target="_blank" title="{{title}}">
@@ -72,22 +74,21 @@
             </a>
             {% endraw %}
         </script>
-
         <script type="text/javascript">
-        function listSponsors()
-            {
-            $.getJSON('https://s3.amazonaws.com/kinlane-productions/json/sponsors.json', function(data) {
+        function listSponsors(){
+            $.getJSON('{{ site.sponsors_json_url }}', function(data) {
                 $.each(data['sponsors'], function(key, val) {
                 var template = $('#parterListingTemplate').html();
                 var html = Mustache.to_html(template, val);
                 $('#partnerListingContainer').append(html);
                 });
             });
-        }
+          }
         </script>
-
-        <div id="partnerListingContainer" align="center" style="background-color:#FFF; margin-top: 45px; padding-top: 10px; width: 60%; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border: 3px solid #FFFFFF; margin-bottom: 7px;">
-
+        <div id="partnerListingContainer" align="center" style="background-color:#FFF; margin-top: {{ site.sponsors_margin_top }}px; padding-top: {{ site.sponsors_padding_top }}px; width: 60%; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border: 3px solid #FFFFFF; margin-bottom: 2px;"></div>
+        <script type="text/javascript">listSponsors();</script>
+        <!-- Sponsorship -->
+        
 		</div>
 
         <script type="text/javascript">
