--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
         <script id="parterListingTemplate" type="text/template">
             {% raw  %}
             <a href="{{url}}" target="_blank" title="{{title}}">
-           		<img src="{{logo}}" width="{{width}}" style="padding: 5px;" />
+           		<img src="{{logo}}" width="80%" style="padding: 5px;" />
             </a>
             {% endraw %}
         </script>
