--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
             });
           }
         </script>
-        <div id="partnerListingContainer" align="center" style="background-color:#FFF; margin-top: {{ site.sponsors_margin_top }}px; padding-top: {{ site.sponsors_padding_top }}px; width: 60%; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border: 3px solid #FFFFFF; margin-bottom: 2px;"></div>
+        <div id="partnerListingContainer" align="center" style="background-color:#FFF; margin-bottom: {{ site.sponsors_margin_bottom }}px; padding-bottom: {{ site.sponsors_padding_bottom }}px; margin-top: {{ site.sponsors_margin_top }}px; padding-top: {{ site.sponsors_padding_top }}px; width: 60%; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border: 3px solid #FFFFFF; margin-bottom: 2px;"></div>
         <script type="text/javascript">listSponsors();</script>
         <!-- Sponsorship -->
 
