--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,4 +47,10 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/{{ site.github_repo }}/blog.xml">
 
+  <style type="text/css">
+    .gist {width:100% !important;}
+    .gist-file
+    .gist-data {max-height: 450px;max-width: 100%;}
+  </style>
+
 </head>
