--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <h1>{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date" style="margin-top: 5px;">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
 
